--- a/temples.html
+++ b/temples.html
@@ -10,8 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="styles/temples.css">
-    <link rel="stylesheet" href="styles/temples-large.css">
+    <link rel="stylesheet" href="week02/styles/temples.css">
+    <link rel="stylesheet" href="week02/styles/temples-large.css">
     <script src="scripts/temples.js" defer></script>
 </head>
 <body>
