images extension correction

--- a/temples.html
+++ b/temples.html
@@ -39,39 +39,39 @@
         <h2>The Best Temples in the world</h2>
         <section class="album">
             <figure>
-                <img src="images/temple1.jpeg" alt="Brigham City Temple">
+                <img src="images/temple1.JPEG" alt="Brigham City Temple">
                 <figcaption>Brigham City Temple</figcaption>
             </figure>
             <figure>
-                <img src="images/temple2.jpeg" alt="Boise Idaho Temple">
+                <img src="images/temple2.JPEG" alt="Boise Idaho Temple">
                 <figcaption>Boise Idaho Temple</figcaption>
             </figure>
             <figure>
-                <img src="images/temple3.jpeg" alt="Chicago Illinois Temple">
+                <img src="images/temple3.JPEG" alt="Chicago Illinois Temple">
                 <figcaption>Chicago Illinois Temple</figcaption>
             </figure>
             <figure>
-                <img src="images/temple4.webp" alt="Calgary Alberta Temple">
+                <img src="images/temple4.WEBP" alt="Calgary Alberta Temple">
                 <figcaption>Calgary Alberta Temple</figcaption>
             </figure>
             <figure>
-                <img src="images/temple5.webp" alt="Campinas Brazil Temple">
+                <img src="images/temple5.WEBP" alt="Campinas Brazil Temple">
                 <figcaption>Campinas Brazil Temple</figcaption>
             </figure>
             <figure>
-                <img src="images/temple6.jpeg" alt="Houston Texas Temple">
+                <img src="images/temple6.JPEG" alt="Houston Texas Temple">
                 <figcaption>Houston Texas Temple</figcaption>
             </figure>
             <figure>
-                <img src="images/temple7.jpeg" alt="Jordan River Temple">
+                <img src="images/temple7.JPEG" alt="Jordan River Temple">
                 <figcaption>Jordan River Temple</figcaption>
             </figure>
             <figure>
-                <img src="images/temple8.jpeg" alt="London England Temple">
+                <img src="images/temple8.JPEG" alt="London England Temple">
                 <figcaption>London England Temple</figcaption>
             </figure>
             <figure>
-                <img src="images/temple9.jpeg" alt="Mcallen Texas Temple">
+                <img src="images/temple9.JPEG" alt="Mcallen Texas Temple">
                 <figcaption>Mcallen Texas Temple</figcaption>
             </figure>
         </section>
