img tag correction

--- a/temples.html
+++ b/temples.html
@@ -24,7 +24,7 @@
                 <span class="hamburger-bar"></span>
                 <span class="hamburger-bar"></span>
             </button>
-            <nav id="primary-nav" class="primary-nav" role="navigation" aria-label="Primary">
+            <nav id="primary-nav" class="primary-nav" aria-label="Primary">
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#old">Old</a></li>
@@ -55,7 +55,7 @@
                 <figcaption>Calgary Alberta Temple</figcaption>
             </figure>
             <figure>
-                <img src="images/temple5.webp"Campinas Brazil Temple">
+                <img src="images/temple5.webp" alt="Campinas Brazil Temple">
                 <figcaption>Campinas Brazil Temple</figcaption>
             </figure>
             <figure>
