--- a/temples.html
+++ b/temples.html
@@ -12,7 +12,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="week02/styles/temples.css">
     <link rel="stylesheet" href="week02/styles/temples-large.css">
-    <script src="scripts/temples.js" defer></script>
+    <script src="week02/scripts/temples.js" defer></script>
 </head>
 <body>
     <header class="site-header">
