--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <img src="/images/travel_logo.jpg" alt="Travel Uganda Logo" class="logo">
+        <img src="../images/travel_logo.jpg" alt="Travel Uganda Logo" class="logo">
         <h1>Travel Uganda - Site Plan</h1>
     </header>
 
@@ -71,10 +71,10 @@
         <section>
             <h2>6. Wireframes</h2>
     <h3>Home Page - Mobile View</h3>
-    <img src="images/travel_uganda_small.webp" alt="Wireframe of Travel Uganda homepage in mobile view">
+    <img src="../images/travel_uganda_small.webp" alt="Wireframe of Travel Uganda homepage in mobile view">
     
     <h3>Home Page - Desktop View</h3>
-    <img src="images/travel_uganda_wide.webp" alt="Wireframe of Travel Uganda homepage in desktop view">
+    <img src="../images/travel_uganda_wide.webp" alt="Wireframe of Travel Uganda homepage in desktop view">
         </section>
     </main>
 
