temples image file path correction

--- a/week02/temples.html
+++ b/week02/temples.html
@@ -10,8 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="week02/styles/temples.css">
-    <link rel="stylesheet" href="week02/styles/temples-large.css">
+    <link rel="stylesheet" href="/styles/temples.css">
+    <link rel="stylesheet" href="/styles/temples-large.css">
     <script src="scripts/temples.js" defer></script>
 </head>
 <body>
@@ -39,15 +39,15 @@
         <h2>The Best Temples in the world</h2>
         <section class="album">
             <figure>
-                <img src="images/temple1.jpeg.jpeg" alt="Brigham City Temple">
+                <img src="/images/temple1.webp" alt="Brigham City Temple">
                 <figcaption>Brigham City Temple</figcaption>
             </figure>
             <figure>
-                <img src="images/" alt="Boise Idaho Temple">
+                <img src="/images/temple2.webp" alt="Boise Idaho Temple">
                 <figcaption>Boise Idaho Temple</figcaption>
             </figure>
             <figure>
-                <img src="/images/temple3.jpeg" alt="Chicago Illinois Temple">
+                <img src="/images/temple3.webp" alt="Chicago Illinois Temple">
                 <figcaption>Chicago Illinois Temple</figcaption>
             </figure>
             <figure>
@@ -59,19 +59,19 @@
                 <figcaption>Campinas Brazil Temple</figcaption>
             </figure>
             <figure>
-                <img src="/images/temple6.jpeg" alt="Houston Texas Temple">
+                <img src="/images/temple6.webp" alt="Houston Texas Temple">
                 <figcaption>Houston Texas Temple</figcaption>
             </figure>
             <figure>
-                <img src="/images/temple7.jpeg" alt="Jordan River Temple">
+                <img src="/images/temple7.webp" alt="Jordan River Temple">
                 <figcaption>Jordan River Temple</figcaption>
             </figure>
             <figure>
-                <img src="/images/temple8.jpeg" alt="London England Temple">
+                <img src="/images/temple8.webp" alt="London England Temple">
                 <figcaption>London England Temple</figcaption>
             </figure>
             <figure>
-                <img src="/images/temple9.jpeg" alt="Mcallen Texas Temple">
+                <img src="/images/temple9.webp" alt="Mcallen Texas Temple">
                 <figcaption>Mcallen Texas Temple</figcaption>
             </figure>
         </section>
